# DOSBoxLauncher

./: .coverage  .gitignore  Readme.md  add_game_dialog.py  base-config.conf  dir_select_dialog.py  main.py  main_window.py  pyproject.toml
ConfigEditor/: confeditorflow.md  config_editor.py  configfile_dataclasses.py  dosbox_config_parser.py
UI/: addgamedlg.ui  config_options.ui  dosboxfe-v2.ui  joystick_advanced.ui  sound_advanced.ui
src/dosboxlauncher/: __init__.py  __main__.py  config.py  exceptions.py  models.py
src/dosboxlauncher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dosboxlauncher/config_editor/: advanced_dialogs.py  dataclasses.py  editor.py  parser.py  tooltips.py
src/dosboxlauncher/ui/: add_game_dialog.py  dir_select_dialog.py  main_window.py
tests/: conftest.py  test_config.py  test_config_ui_refresh.py  test_dataclasses.py  test_exceptions.py  test_main.py  test_main_window.py  test_models.py  test_parser.py  test_reset_config.py  test_tooltips.py
